~R [tmux] reverting statusbar position change
yea nah m8

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set-window-option -g status-position top
+set-window-option -g status-position bottom
 
 set -g prefix C-q # C-q is more ergonomic for me
 
