--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,7 @@
-set-window-option -g status-position bottom
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
-set -g prefix C-q # C-q is more ergonomic for me
-
-set-option -g allow-rename off
+set -g prefix C-q # C-q is more ergonomic for me as long as i dont mistake it for CMD-Q xD
 
 set -g mouse on
 
