can't be bothered to write a commit message

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,12 +26,17 @@ bind-key l select-pane -R
 # reload config
 bind R source-file ~/.tmux.conf
 
+# configuring theme
+set -g @catppuccin_status_modules_right "application session battery"
+set -g @catppuccin_status_modules_left "date_time"
+
 # List of plugins
 set -g @tpm_plugins '            \
   tmux-plugins/tpm               \
   tmux-plugins/tmux-sensible     \
   christoomey/vim-tmux-navigator \
   catppuccin/tmux                \
+  tmux-plugins/tmux-battery      \
 '
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
