--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+set -g default-shell "/usr/local/bin/fish"
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
@@ -5,10 +6,10 @@ set -g prefix C-q # C-q is more ergonomic for me as long as i dont mistake it fo
 
 set -g mouse on
 
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+#bind -n M-Left select-pane -L
+#bind -n M-Right select-pane -R
+#bind -n M-Up select-pane -U
+#bind -n M-Down select-pane -D
 
 # split panes using | and -
 bind | split-window -h
@@ -23,12 +24,15 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+# toggle status bar
+bind b set -g status
+
 # reload config
-bind R source-file ~/.tmux.conf
+bind R source-file ~/.tmux.conf 
 
 # configuring theme
-set -g @catppuccin_status_modules_right "application session battery"
-set -g @catppuccin_status_modules_left "date_time"
+set -g @catppuccin_status_modules_right "application session"
+set -g @catppuccin_status_modules_left ""
 
 # List of plugins
 set -g @tpm_plugins '            \
