--- a/.config/aerc/aerc.conf
+++ b/.config/aerc/aerc.conf
@@ -245,12 +245,12 @@ fuzzy-complete=true
 # Uncomment to use UTF-8 symbols to indicate PGP status of messages
 #
 # Default: ASCII
-#icon-unencrypted=
-#icon-encrypted=✔
-#icon-signed=✔
-#icon-signed-encrypted=✔
-#icon-unknown=✘
-#icon-invalid=⚠
+icon-unencrypted=
+icon-encrypted=✔
+icon-signed=✔
+icon-signed-encrypted=✔
+icon-unknown=✘
+icon-invalid=⚠
 
 # Reverses the order of the message list. By default, the message list is
 # ordered with the newest (highest UID) message on top. Reversing the order
