--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,12 +27,7 @@ bind-key l select-pane -R
 # toggle status bar
 bind b set -g status
 
-# reload config
 bind R source-file ~/.tmux.conf 
-
-# configuring theme
-set -g @catppuccin_status_modules_right "application session"
-set -g @catppuccin_status_modules_left ""
 
 # List of plugins
 set -g @tpm_plugins '            \
@@ -41,6 +36,26 @@ set -g @tpm_plugins '            \
   christoomey/vim-tmux-navigator \
   catppuccin/tmux                \
   tmux-plugins/tmux-battery      \
+  olimorris/tmux-pomodoro-plus   \
 '
+
+set -g @catppuccin_status_background "default"
+
+set -g @catppuccin_window_current_color "#{thm_lavender}" # text color
+set -g @catppuccin_window_current_background "#{thm_bg}"
+
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_middle_separator " | "
+
+set -g @catppuccin_window_default_fill "none"
+
+set -g @catppuccin_window_current_fill "all"
+
+set -g @catppuccin_status_modules_right "application session user"
+set -g @catppuccin_status_left_separator "█"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
