--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,9 @@ bind-key l select-pane -R
 
 # toggle status bar
 bind b set -g status
+bind m set -g previous-window
+
+set -g status-justify centre
 
 bind R source-file ~/.tmux.conf 
 
@@ -37,12 +40,16 @@ set -g @tpm_plugins '            \
   catppuccin/tmux                \
   tmux-plugins/tmux-battery      \
   olimorris/tmux-pomodoro-plus   \
+  tmux-plugins/tmux-resurrect    \
 '
 
 set -g @catppuccin_status_background "default"
 
-set -g @catppuccin_window_current_color "#{thm_lavender}" # text color
-set -g @catppuccin_window_current_background "#{thm_bg}"
+set -g @catppuccin_window_default_color "#{thm_blue}" # text color
+set -g @catppuccin_window_default_background "#{thm_gray}"
+
+set -g @catppuccin_window_current_color "#cba6f7"
+set -g @catppuccin_window_current_background "#1e1e2e"
 
 set -g @catppuccin_window_right_separator "█ "
 set -g @catppuccin_window_number_position "right"
@@ -52,10 +59,15 @@ set -g @catppuccin_window_default_fill "none"
 
 set -g @catppuccin_window_current_fill "all"
 
-set -g @catppuccin_status_modules_right "application session user"
+set -g @catppuccin_status_modules_right "gitmux session"
 set -g @catppuccin_status_left_separator "█"
 
-set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @catppuccin_session_color "#cba6f7"
+set -g @catppuccin_gitmux_color "#cba6f7"
+
+set -g @catppuccin_window_default_text "#W" # use "#W" for application instead of directory
+set -g @catppuccin_window_current_text "#W"
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
